# ci_test

./: .appveyor.yml  CMakeLists.txt
.github/workflows/: install_qt.yml  print_env.yml  set_env.yml  test-qt5.yml  test.yml  test_path.yml
